Testing GridSearchCV performance for SVM and Decision Tree

--- a/Emily_Novak_Project_1.ipynb
+++ b/Emily_Novak_Project_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3u4gNwczK9+nZ9p/aIi9x",
+      "authorship_tag": "ABX9TyO3BYSBEw9xhnllL23pjAei",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ennovak/AI-Detection-LLM/blob/main/Emily_Novak_Project_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ennovak/AI-Detection-LLM/blob/SVM-Model-Testing/Emily_Novak_Project_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -974,9 +974,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **3. Model Development**\n",
-        "\n",
-        "3.1: Support Vector Machine (SVM)"
+        "# **3. Model Training and Testing**"
       ],
       "metadata": {
         "id": "V0F1ue_DRiQJ"
@@ -984,9 +982,200 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Create pipelines for each classifier\n",
+        "from sklearn import svm\n",
+        "from sklearn import tree\n",
+        "from sklearn.ensemble import AdaBoostClassifier\n",
+        "\n",
+        "# Basic SVM pipeline\n",
+        "svm_pipeline = Pipeline([\n",
+        "    ('vectorizer', TfidfVectorizer()),\n",
+        "    ('scaler', StandardScaler(with_mean=False)),\n",
+        "    ('classifier', svm.SVC(probability=True, random_state=42, cache_size=1000)) # higher cache size to reduce training time\n",
+        "])\n",
+        "\n",
+        "# Basic Decision Tree pipeline\n",
+        "dt_pipeline = Pipeline([\n",
+        "    ('vectorizer', TfidfVectorizer()),\n",
+        "    ('classifier', tree.DecisionTreeClassifier(random_state=42))\n",
+        "])\n",
+        "\n",
+        "# Basic AdaBoost pipeline\n",
+        "ada_pipeline = Pipeline([\n",
+        "    ('vectorizer', TfidfVectorizer()),\n",
+        "    ('classifier', AdaBoostClassifier(random_state=42))\n",
+        "])"
+      ],
       "metadata": {
         "id": "eUj_tDJVRWxY"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.1: SVM Training"
+      ],
+      "metadata": {
+        "id": "YofullqOVsnJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n Hyperparameter Tuning For SVM \")\n",
+        "print(\"-\" * 45)\n",
+        "\n",
+        "# Define SVM param grid, decreasing parameter amount due to intensive nature of SVM\n",
+        "svm_param_grid = {\n",
+        "'vectorizer__max_features': [3000, 6000],\n",
+        "'vectorizer__ngram_range': [(1,1), (1,2)],\n",
+        "'classifier__C': [0.1, 1, 10],\n",
+        "'classifier__kernel': ['linear', 'rbf'],\n",
+        "'classifier__gamma': ['scale', 'auto'] # for rbf kernel\n",
+        "}\n",
+        "\n",
+        "# Perform Grid Search\n",
+        "svm_grid_search = GridSearchCV(\n",
+        "    svm_pipeline,\n",
+        "    svm_param_grid,\n",
+        "    cv=3,\n",
+        "    scoring='accuracy',\n",
+        "    n_jobs=-1,\n",
+        "    verbose=1\n",
+        ")\n",
+        "\n",
+        "print(f\"\\nPerforming Grid Search for SVM Model...\")\n",
+        "start_time = time.time()\n",
+        "svm_grid_search.fit(X_train, y_train)\n",
+        "grid_time = time.time() - start_time\n",
+        "\n",
+        "print(f\"Grid Search completed in {grid_time:.2f} seconds\")\n",
+        "print(f\"Best parameters: {svm_grid_search.best_params_}\")\n",
+        "print(f\"Best CV score: {svm_grid_search.best_score_:.4f}\")\n",
+        "\n",
+        "# Evaluate SVM model on validation set\n",
+        "svm_val_score = svm_grid_search.score(X_val, y_val)\n",
+        "print(f\"SVM validation accuracy: {svm_val_score:.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SMkPzJvqVrhm",
+        "outputId": "716961fc-0ab4-4d56-9ff5-f3f512e7f9d9"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " Hyperparameter Tuning For SVM \n",
+            "---------------------------------------------\n",
+            "\n",
+            "Performing Grid Search for SVM Model...\n",
+            "Fitting 3 folds for each of 48 candidates, totalling 144 fits\n",
+            "Grid Search completed in 2874.88 seconds\n",
+            "Best parameters: {'classifier__C': 0.1, 'classifier__gamma': 'scale', 'classifier__kernel': 'linear', 'vectorizer__max_features': 6000, 'vectorizer__ngram_range': (1, 2)}\n",
+            "Best CV score: 0.9658\n",
+            "SVM validation accuracy: 0.9598\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.2: Decision Tree Training"
+      ],
+      "metadata": {
+        "id": "W6o1GicPXl9T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n Hyperparameter Tuning For Decision Tree \")\n",
+        "print(\"-\" * 45)\n",
+        "\n",
+        "dt_param_grid = {\n",
+        "'vectorizer__max_features': [3000, 6000],\n",
+        "'vectorizer__ngram_range': [(1,1), (1,2)],\n",
+        "'classifier__criterion': ['gini', 'entropy'],\n",
+        "'classifier__max_depth': [10, 20, None],\n",
+        "'classifier__min_samples_split': [2, 5],\n",
+        "'classifier__min_samples_leaf': [1, 2]\n",
+        "}\n",
+        "\n",
+        "\n",
+        "# Perform Grid Search\n",
+        "dt_grid_search = GridSearchCV(\n",
+        "    dt_pipeline,\n",
+        "    dt_param_grid,\n",
+        "    cv=3,\n",
+        "    scoring='accuracy',\n",
+        "    n_jobs=-1,\n",
+        "    verbose=1\n",
+        ")\n",
+        "\n",
+        "print(f\"\\nPerforming Grid Search for Decision Tree...\")\n",
+        "start_time = time.time()\n",
+        "dt_grid_search.fit(X_train, y_train)\n",
+        "grid_time = time.time() - start_time\n",
+        "\n",
+        "print(f\"Grid Search completed in {grid_time:.2f} seconds\")\n",
+        "print(f\"Best parameters: {dt_grid_search.best_params_}\")\n",
+        "print(f\"Best CV score: {dt_grid_search.best_score_:.4f}\")\n",
+        "\n",
+        "# Evaluate Decision Tree model on validation set\n",
+        "dt_val_score = dt_grid_search.score(X_val, y_val)\n",
+        "print(f\"Decision Tree validation accuracy: {dt_val_score:.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hKDNfBjSXAGf",
+        "outputId": "f6f3675b-0f88-4870-bf8f-7a36825d537e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " Hyperparameter Tuning For Decision Tree \n",
+            "---------------------------------------------\n",
+            "\n",
+            "Performing Grid Search for Decision Tree...\n",
+            "Fitting 3 folds for each of 96 candidates, totalling 288 fits\n",
+            "Grid Search completed in 355.31 seconds\n",
+            "Best parameters: {'classifier__criterion': 'gini', 'classifier__max_depth': 10, 'classifier__min_samples_leaf': 1, 'classifier__min_samples_split': 2, 'vectorizer__max_features': 6000, 'vectorizer__ngram_range': (1, 1)}\n",
+            "Best CV score: 0.8649\n",
+            "Decision Tree validation accuracy: 0.8700\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.3: AdaBoost Training"
+      ],
+      "metadata": {
+        "id": "Skukm4nkXow5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cCJeUtCBcVr6"
       },
       "execution_count": null,
       "outputs": []
